--- a/Samples~/Packages/manifest.json
+++ b/Samples~/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.theor.burstexpressions": "file:../../",
     "com.unity.collab-proxy": "1.5.7",
+    "com.unity.collections": "1.0.0-pre.3",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.8",
     "com.unity.ide.vscode": "1.2.3",
