--- a/Tests/Editor/Tests.asmdef
+++ b/Tests/Editor/Tests.asmdef
@@ -2,11 +2,11 @@
     "name": "Tests",
     "rootNamespace": "",
     "references": [
-        "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner",
-        "Eval",
-        "Unity.Mathematics",
-        "Unity.Collections"
+        "GUID:27619889b8ba8c24980f49ee34dbb44a",
+        "GUID:0acc523941302664db1f4e527237feb3",
+        "GUID:7692ed34a73b1fb4792fa24fd49d321b",
+        "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:e0cd26848372d4e5c891c569017e11f1"
     ],
     "includePlatforms": [
         "Editor"
