Squashed commit of the following:
commit c07acf22e7486f1f653a2c6b5abcd09566c55b76
Author: Theo Richart <theor@unity3d.com>
Date:   Sat Jul 10 12:23:11 2021 -0400

    faster evaluator by replacing the NativeList with an UnsafeList

commit 4827ed1886252871b36aa8419cb5304a94270b58
Author: Theo Richart <theor@unity3d.com>
Date:   Sat Jul 10 12:21:40 2021 -0400

    cleanup

commit f1cf25656678354a9bd2a01c4a27e632c97d0025
Author: Theo Richart <theor@unity3d.com>
Date:   Fri Jul 9 11:53:39 2021 -0400

    batch sample

commit d1031e43373789058946c6ccee8f2fa7811fb9f2
Author: Theo Richart <theor@unity3d.com>
Date:   Fri Jul 9 11:27:08 2021 -0400

    rename runtime classes

commit 57ce9600a2b721db5823f34b6e3fb7afa38cfa47
Author: Theo Richart <theor@unity3d.com>
Date:   Fri Jul 9 10:26:16 2021 -0400

    cleanup namespaces

commit ea93fa7e1e7cd13ae051b5688d04b4597dc292d0
Author: Theo Richart <theor@unity3d.com>
Date:   Fri Jul 9 09:23:38 2021 -0400

    split test results

commit d3a068857e4a07798df36dc35ae79f5350e21813
Author: Theo Richart <theor@unity3d.com>
Date:   Thu Jul 8 18:31:28 2021 -0400

    allow dirty build

commit e0c4c884c645ab1aa2ea90e61ca37f28fc92fd53
Author: Theo Richart <theor@unity3d.com>
Date:   Thu Jul 8 18:23:35 2021 -0400

    project version for CI

commit a72cd2ec532ed89563e8ac1bcb66adb75d3e4d4d
Author: Theo Richart <theor@unity3d.com>
Date:   Thu Jul 8 18:18:06 2021 -0400

    more platforms

commit d9ee5222c7d5eae550acdc7111cfc9cf0440bc16
Author: Theo Richart <theor@unity3d.com>
Date:   Thu Jul 8 18:17:49 2021 -0400

    update manifest

commit b82d6ee5ef6b6d475328c3ab4a651cde8227c009
Author: Theo Richart <theor@unity3d.com>
Date:   Thu Jul 8 18:09:14 2021 -0400

    Move sample project

commit f0574be728a22c0487ca09ae5c30ded451dd8ba2
Author: Theo Richart <theor@unity3d.com>
Date:   Thu Jul 8 18:01:50 2021 -0400

    wip

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Actions 😎
+name: Test/Build
 
 on: [push, pull_request, workflow_dispatch]
 
@@ -10,15 +10,15 @@ jobs:
       fail-fast: false
       matrix:
         projectPath:
-          - Samples~
+          - ".Samples"
         unityVersion:
           - 2020.3.13f1
         targetPlatform:
-          - StandaloneOSX # Build a macOS standalone (Intel 64-bit).
+          # - StandaloneOSX # Build a macOS standalone (Intel 64-bit).
           - StandaloneWindows64 # Build a Windows 64-bit standalone.
           - StandaloneLinux64 # Build a Linux 64-bit standalone.
-          - iOS # Build an iOS player.
-          - Android # Build an Android player.
+          # - iOS # Build an iOS player.
+          # - Android # Build an Android player.
           - WebGL # WebGL.
     steps:
       - uses: actions/checkout@v2
@@ -43,7 +43,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         if: always()
         with:
-          name: Test results (all modes)
+          name: Test results (${{ matrix.targetPlatform }})
           path: ${{ steps.testRunner.outputs.artifactsPath }}
       - uses: game-ci/unity-builder@v2
         env:
@@ -52,7 +52,8 @@ jobs:
           projectPath: ${{ matrix.projectPath }}
           unityVersion: ${{ matrix.unityVersion }}
           targetPlatform: ${{ matrix.targetPlatform }}
-          customParameters: '-myParameter myValue -myBoolean -ThirdParameter andItsValue'
+          # customParameters: '-myParameter myValue -myBoolean -ThirdParameter andItsValue'
+          allowDirtyBuild: true
       - uses: actions/upload-artifact@v2
         with:
           name: Build
