--- a/Runtime/BurstExpressions.Runtime.asmdef
+++ b/Runtime/BurstExpressions.Runtime.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Eval",
-    "rootNamespace": "",
+    "name": "BurstExpressions.Runtime",
+    "rootNamespace": "BurstExpressions.Runtime",
     "references": [
         "Unity.Mathematics",
         "Unity.Burst",
