--- a/.Samples/Packages/manifest.json
+++ b/.Samples/Packages/manifest.json
@@ -1,15 +1,18 @@
 {
   "dependencies": {
+    "com.unity.test-framework.performance":"2.8.0-preview",  
     "com.theor.burstexpressions": "file:../../",
     "com.unity.collab-proxy": "1.5.7",
     "com.unity.collections": "1.0.0-pre.3",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.render-pipelines.universal": "10.5.1",
     "com.unity.test-framework": "1.1.27",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
+    "com.unity.visualeffectgraph": "10.5.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -21,7 +24,7 @@
     "com.unity.modules.imgui": "1.0.0",
     "com.unity.modules.jsonserialize": "1.0.0",
     "com.unity.modules.particlesystem": "1.0.0",
-    "com.unity.modules.physics": "1.0.0",
+    "com.unity.modules.physics": "1.0.0", 
     "com.unity.modules.physics2d": "1.0.0",
     "com.unity.modules.screencapture": "1.0.0",
     "com.unity.modules.terrain": "1.0.0",
@@ -43,6 +46,7 @@
     "com.unity.modules.xr": "1.0.0"
   },
   "testables": [
+    "com.unity.test-framework.performance",
     "com.theor.burstexpressions"
   ]
 }
