--- a/.Samples/Packages/manifest.json
+++ b/.Samples/Packages/manifest.json
@@ -1,18 +1,17 @@
 {
   "dependencies": {
-    "com.unity.test-framework.performance":"2.8.0-preview",  
     "com.theor.burstexpressions": "file:../../",
-    "com.unity.collab-proxy": "1.5.7",
-    "com.unity.collections": "1.0.0-pre.3",
+    "com.unity.collab-proxy": "1.14.16",
+    "com.unity.collections": "0.9.0-preview.6",
     "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.11",
-    "com.unity.ide.vscode": "1.2.3",
-    "com.unity.render-pipelines.universal": "10.5.1",
-    "com.unity.test-framework": "1.1.27",
-    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.ide.visualstudio": "2.0.15",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.render-pipelines.universal": "7.7.1",
+    "com.unity.test-framework": "1.1.31",
+    "com.unity.test-framework.performance": "2.8.0-preview",
+    "com.unity.textmeshpro": "2.1.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualeffectgraph": "10.5.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -24,7 +23,7 @@
     "com.unity.modules.imgui": "1.0.0",
     "com.unity.modules.jsonserialize": "1.0.0",
     "com.unity.modules.particlesystem": "1.0.0",
-    "com.unity.modules.physics": "1.0.0", 
+    "com.unity.modules.physics": "1.0.0",
     "com.unity.modules.physics2d": "1.0.0",
     "com.unity.modules.screencapture": "1.0.0",
     "com.unity.modules.terrain": "1.0.0",
